--- a/css/profile.css
+++ b/css/profile.css
@@ -75,7 +75,7 @@
     min-width: 250px;
     height: 250px;
     border-radius: 50%;
-    background-image: url("./assets/cv-foto.jpg");
+    background-image: url('../assets/cv-foto.jpg');
     background-size: cover;
     background-position: center;
 }
